[package]
name = "actix-coap"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
edition = "2018"

[[bin]]
name = "coap-server"
path = "src/main.rs"

[[bin]]
name = "coap-client"
path = "src/client.rs"

[dependencies]
async-coap = "0.1"
async-coap-tokio = "0.1"
tokio = "0.2.0-alpha.4"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
openssl = { version="0.10" }


